--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <img id="favicon" src="https://juandevgroup.github.io/meps_logo.png">
 
   <!-- Botón en forma de pestaña -->
-<button class="tab-button">Archivo</button>
+<button class="tab-button">Arquivo</button>
 
 <!-- Menú desplegable -->
 <div class="menu-container">
@@ -36,19 +36,19 @@
 </div>
 
 <!-- Botón en forma de pestaña -->
-<button class="tab-button2">Edición</button>
+<button class="tab-button2">Ediçao</button>
 <div class="menu-container2">
   <button class="close-button-edit">×</button> <!-- Botón en forma de X -->
   <ul class="menu-list2">
   <!-- Botón para cargar código en el editor WOL-->
-<li><button class="menu-item2" id="loadwol-code-btn">Cargar código de ejemplo:WOL.JW.ORG</button></li>
+<li><button class="menu-item2" id="loadwol-code-btn">Carregar codigo de exemplo:WOL.JW.ORG</button></li>
 
   <!-- Botón para cargar código en el editor -->
-<li><button class="menu-item2" id="load-code-btn">Cargar código de ejemplo:JW.ORG</button></li>
+<li><button class="menu-item2" id="load-code-btn">Carregar codigo de exemplo:JW.ORG</button></li>
 
   <!-- Botón para borrar todo el contenido del editor -->
-<li><button class="menu-item2" id="clear-btn">Borrar todo</button></li>
-<li><button class="menu-item2" id="refreshButton">Reiniciar el editor</button></li>
+<li><button class="menu-item2" id="clear-btn">Apagar tudo</button></li>
+<li><button class="menu-item2" id="refreshButton">Reiniciar o editor</button></li>
 
 
 </ul>
@@ -68,7 +68,7 @@
 
 <!-- Contenedor del catálogo -->
 <div id="catalog-container" style="display: none;">
-  <h2>Catálogo de archivos</h2>
+  <h2>Catálogo de arquivos</h2>
 <button class="close-button">×</button> <!-- Botón en forma de X -->
   <ul>
     <li><a id="file1" href="archivos/mwb_S_202407.jwpub" download>Guía de actividades: Julio y Agosto.</a></li>
